# NF-GameServer

./: .gitignore  README.md  Servers.sln
ChatServer/: CMakeLists.txt  ChatServer.vcxproj  ChatServer.vcxproj.filters  Main.cpp
ChatServer/MsgHandle/: ChatPlayer.cpp  ChatPlayer.h  ModuleChat.cpp
ChatServer/NodeNet/: ChatNodeClient.cpp  ChatNodeClient.h  ChatServerThread.cpp  ChatServerThread.h
Common/: CMakeLists.txt  Common.vcxproj  Common.vcxproj.filters
Common/DesignTable/: Activity.hpp  ActivityTable.hpp
Common/GameStruct/: GameDef.h
Common/NFComm/NFCore/: NFConsistentHash.hpp  NFDataList.hpp  NFList.hpp  NFMap.hpp  NFMapEx.hpp  NFQueue.hpp  NFVector2.hpp  NFVector3.hpp  crc32.hpp
Common/NFComm/NFNetPlugin/: NFHttpClient.cpp  NFHttpClient.h  NFHttpClientModule.cpp  NFHttpClientModule.h  NFHttpServer.cpp  NFHttpServer.h  NFHttpServerModule.cpp  NFHttpServerModule.h  NFIHttpClient.h  NFIHttpServer.h  NFINet.h  NFNet.cpp  NFNet.h  NFNetClientModule.cpp  NFNetClientModule.h  NFNetModule.cpp  NFNetModule.h  NetClientBase.cpp  NetClientBase.h  NetServerBase.cpp  NetServerBase.h
Common/NFComm/NFPluginModule/: NFGUID.h  NFIHttpClientModule.h  NFIHttpServerModule.h  NFIModule.h  NFINetClientModule.h  NFINetModule.h  NFPlatform.h
Common/Packet/: Packet.h  Player.h
Common/ServerComm/: BlockQueue.h  CommonDef.h  Config.cpp  Config.h  Lock.h  MemPool.hpp  ObjPool.h  Random.hpp  Singleton.h  ThreadPool.cpp  ThreadPool.h  Timer.cpp  Timer.h  Util.cpp  Util.h  variant.hpp
Common/ServerProto/: GameDB.pb.cc  GameDB.pb.h  GameDB.proto  NFNodeNet.pb.cc  NFNodeNet.pb.h  NFNodeNet.proto  ServerPublic.pb.cc
Common/easylogging/: easylogging++.cc  easylogging++.h
Common/jsoncpp/: jsoncpp.cpp
Common/redis/: GameRedis.cpp  GameRedis.h  RedisOp.cpp  RedisOp.h
Config/: chat_log.conf  db_log.conf  game_log.conf  gate_log.conf  global_log.conf  login_log.conf  master_log.conf  readme.txt
DBServer/: CMakeLists.txt  DB.cpp  DBServer.vcxproj  DBServer.vcxproj.filters  Main.cpp
DBServer/Connection/: ConnectionPool.cpp  ConnectionPool.h  MyConnection.cpp
DBServer/NodeNet/: DBNodeClient.cpp  DBNodeClient.h  DBNodeServer.cpp  DBNodeServer.h  DBServerThread.cpp  DBServerThread.h
Dependencies/libs/: event.lib  event_core.lib  event_extra.lib  event_openssl.lib  gmock_main.lib  gmockd.lib  gtestd.lib  hiredis.lib  hiredis_d.lib  libeay32.lib  lua.lib
Dependencies/window_libevent/include/event2/: event-config.h
GameServer/: CMakeLists.txt  GameServer.vcxproj  GameServer.vcxproj.filters  Main.cpp
GameServer/NodeNet/: GameNodeClient.cpp  GameNodeClient.h  GameServerThread.cpp  GameServerThread.h
GateServer/: GateServer.vcxproj  GateServer.vcxproj.filters  Main.cpp
GateServer/ClientPlayer/: ClientPlayer.h
GateServer/NodeNet/: GateNodeServer.cpp  GateNodeServer.h  GatePlayerServer.cpp  GateServerThread.cpp  GateServerThread.h
LoginServer/: CMakeLists.txt  Login.cpp  LoginServer.vcxproj  LoginServer.vcxproj.filters  Main.cpp
LoginServer/NodeNet/: LoginNodeClient.cpp  LoginNodeClient.h  LoginServerThread.cpp  LoginServerThread.h
MasterServer/: Main.cpp  MasterServer.vcxproj
MasterServer/NodeNet/: MasterNodeServer.cpp  MasterNodeServer.h  MasterServerThread.cpp  MasterServerThread.h
MyClient/: Client.cpp  Client.h  MyClient.vcxproj  MyClient.vcxproj.filters  main.cpp
MyTest/: MyTest.vcxproj  MyTest.vcxproj.filters  TestRedis.cpp  TestRedis.h  main_test.cpp  mariadb.cpp  mariadb.h
ServerList/: readme.txt
ThirdPart/: readme.txt
ThirdPart/hiredis/hiredis_win/hiredis/msvc/Temp/Debug_x64/hiredis/: hiredis.idb
ThirdPart/hiredis/hiredis_win/hiredis/msvc/Temp/Debug_x64/hiredis/hiredis.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  hiredis.lastbuildstate
Tools/: Start.bat  Stop.bat  readme.txt
WorldServer/: CMakeLists.txt  Main.cpp  WorldServer.vcxproj
WorldServer/NodeNet/: WorldNodeClient.cpp  WorldNodeClient.h  WorldNodeServer.cpp  WorldNodeServer.h  WorldServerThread.cpp  WorldServerThread.h
cmake2_script/: cmake_conf.json  gen_cmake_tmp.py  make_all.sh  project_cmake.py
cmake2_script/make_script/: gen_cmake.py
cmake_script/: README.txt  make_all.sh  make_chatserver.sh  make_common.sh  make_dbserver.sh  make_gameserver.sh  make_gateserver.sh  make_libevent.sh  make_loginserver.sh  make_masterserver.sh  make_navmesh.sh  make_protobuf.sh  make_worldserver.sh  project_cmake.py
