cmake_minimum_required(VERSION 2.8)
project(GameServer)
add_definitions()
include_directories()
link_directories()
set(SOURCE_FILE Game.cpp Main.cpp NodeNet/GameNodeClient.cpp NodeNet/GameServerThread.cpp)

set(CMAKE_VERBOSE_MAKEFILE on)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -o2")
set(CMAKE_C_COMPILER "gcc")
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
        
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
add_library(GameServer STATIC ${SOURCE_FILE})
